@@ -7,9 +7,9 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Configuration
@@ -20,9 +20,6 @@ public class CorsConfig {
 
     @Value("${cors.allowed-methods}")
     private String allowedMethods;
-
-    @Value("${cors.allowed-headers}")
-    private String allowedHeaders;
 
     @Value("${cors.exposed-headers}")
     private String exposedHeaders;
@@ -38,8 +35,8 @@ public class CorsConfig {
         CorsConfiguration config = new CorsConfiguration();
 
         List<String> origins = Arrays.stream(allowedOrigins.split(","))
-                .map(String::trim)          // añadir trim
-                .collect(Collectors.toList());
+                .map(String::trim)
+                .toList();
 
         config.setAllowedOrigins(origins);
         config.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
